--- a/notebooks/nn_linear_layer.ipynb
+++ b/notebooks/nn_linear_layer.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "#### Preliminaries\n",
     "\n",
-    "* This notebook assumes a basic understanding of calculus and the chain rules, including the general concept of backpropagation train neural networks.\n",
+    "* This notebook assumes a basic understanding of calculus and the chain rules, including the general concept of backpropagation for training neural networks.\n",
     "* While this notebook includes an implementation of a linear layer, this implementation is only for educational purposes. The institution is not to mimic highly optimized implementations provided by frameworks such as PyTorch or Tensorflow."
    ]
   },
@@ -191,7 +191,7 @@
     "\n",
     "In a neural network, the **forward pass** is the process of computing the output of the network for a given input. Starting from the input layer, data is passed sequentially through each layer, with each layer's output becoming the input to the next layer. The forward pass continues until the final layer produces the network's prediction or output. This output is then used to compute a loss $\\mathcal{L}$ value by comparing it to the ground truth provided by the annotated training dataset. Importantly, the forward pass defines how information flows through the model and establishes the intermediate values that are later needed during the backward pass to compute gradients for learning.\n",
     "\n",
-    "The operation each neuron of a linear layer performs during the forward pass is to compute the weighted sum of the input features plus a bias. More concretely, for a single (i.e., unbatched) input vector $x_{i} \\in \\mathbb{R}^D$, the (h)-th neuron computes:"
+    "The operation each neuron of a linear layer performs during the forward pass is to compute the weighted sum of the input features plus a bias. More concretely, for a single (i.e., unbatched) input vector $x_{i} \\in \\mathbb{R}^D$, the $k$-th neuron computes:"
    ]
   },
   {
